2015-01-15      Gaius Mulley <gaius@gnu.org>

	* released GM2 1.1.3
	* gm2/gm2-libs/config-host:  rebuilt.
	* gm2/gm2-libs/config-host.in:  1.1.3.
	* gm2/gm2-libs/config-target:  rebuilt.
	* gm2/gm2-libs/config-target.in:  1.1.3.
	* gm2/gm2.texi:  updated release map.
	* gm2/version.c:  1.1.3.
	* gm2/examples/pge/examples:  improved debugging log messages.

2015-01-09      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  changed path to gnu.eps to contain
	  $(objdir).
	* gm2/examples/pge/examples/exampleBoxes.py:  more intermin
	  changes.
	* gm2/examples/pge/pge.py:  more intermin changes.
	* gm2/examples/pge/pgeplayback.py:  more intermin changes.
	* gm2/examples/pge/twoDsim.mod:  more intermin changes.

2015-01-02      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/ConvStringLong.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	* gm2/gm2-libs-iso/ConvStringReal.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	  This fixes a bug reported by:  Michael Riedl.

2015-01-01      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.
	* gm2/gm2-compiler/M2GenGCC.mod:  FoldConvert use PopKindTree.
          PopKindTree new procedure function.  This fixes a bug reported
	  by:  Michael Riedl.  (see
	  http://lists.nongnu.org/archive/html/gm2/2015-02/msg00006.html).

2015-03-28      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.

2015-03-16      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many more improvements to pgeplayback.py
	  and twoDsim.mod.

2015-03-15      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  more changes to the shared library example.
	* gm2/gm2-libs/gdbif.mod:  New file.
	* gm2/gm2-libs/gdbif.def:  New file.

2015-02-25      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  huge amount of changes to expose the frame
	  buffer to python/pygame.
